--- a/src/app/modulos/dashboard/dashboard.component.html
+++ b/src/app/modulos/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
 <div class="p-5 mb-4 bg-body-tertiary rounded-3">
     <div class="container-fluid py-5">
       <h1 class="display-5 fw-bold">Plantilla proyecto</h1>
-      <p class="col-md-8 fs-4">Nos encargamos de poder manejar el orden, del taller, manejando su costo y equilibrio economico, incluyendo el inventario de este.</p>
+      <p class="col-md-8 fs-4"></p>
       <button class="btn btn-primary btn-lg" type="button">Loading...</button>
     </div>
   </div>
