--- a/src/app/modulos/usuario/usuario.component.html
+++ b/src/app/modulos/usuario/usuario.component.html
@@ -5,27 +5,31 @@
 <div id="formulario" *ngIf="verf==true">
     <div class="row">
         <div class="col-lg-6">
-            <input type="text" id="nombre" class="form-control">
+            <input type="text" id="nombre" class="form-control" [(ngModel)]="user.nombre"><br>
+            <span style="color: red;" *ngIf="validnombre==false">Insertar Nombre</span>
         </div>
         <div class="col-lg-6">
-            <input type="email" id="email" class="form-control">
+            <input type="email" id="email" class="form-control" [(ngModel)]="user.email"><br>
+            <span style="color: red;" *ngIf="validemail==false">Insertar Usuario</span>
         </div>
     </div>
     <div class="row">
         <div class="col-lg-6">
-            <input type="password" id="clave" class="form-control">
+            <input type="password" id="clave" class="form-control" [(ngModel)]="user.clave"><br>
+            <span style="color: red;" *ngIf="validclave==false">Insertar Contraseña</span>
         </div>
         <div class="col-lg-6">
-            <select id="tipo" class="form-control form-select">
+            <select id="tipo" class="form-control form-select" [(ngModel)]="user.tipo">
                 <option value="Administrador" label="Administrador">Administrador</option>
                 <option value="General" label="General">General</option>
-            </select>
+            </select><br>
+            <span style="color: red;" *ngIf="validtipo==false">Elegir el tipo de usuario</span>
         </div>
     </div>
     <div class="row">
         <div class="col-lg-3"></div>
         <div class="col-lg-3">
-            <button class="btn btn-primary">Guardar</button>
+            <button class="btn btn-primary" (click)="ingresar()">Guardar</button>
         </div>
         <div class="col-lg-3">
             <button class="btn btn-secondary" (click)="mostrar(0)">Cancelar</button>
@@ -49,9 +53,9 @@
            <td>{{item.email}}</td> 
            <td>{{item.tipo}}</td> 
            <td>
-               Editar
-               -
-               Eliminar
+                <i class="bi bi-pen-fill editar" title="editar"></i>
+               
+                <i (click)="pregunta(item.id_usuario, item.nombre)" class="bi bi-trash3-fill eliminar" title="Eliminar"></i>
            </td> 
         </tr>
     </table>
