--- a/src/app/modulos/usuario/usuario.component.scss
+++ b/src/app/modulos/usuario/usuario.component.scss
@@ -4,3 +4,12 @@ input, select, button{
     border-style: solid;
     border-color: gray;
 }
+
+.editar{
+    color: blue;
+    cursor: pointer;
+}
+.eliminar{
+    color: red;
+    cursor: pointer;
+}
