--- a/src/app/modulos/usuario/usuario.component.html
+++ b/src/app/modulos/usuario/usuario.component.html
@@ -29,7 +29,8 @@
     <div class="row">
         <div class="col-lg-3"></div>
         <div class="col-lg-3">
-            <button class="btn btn-primary" (click)="ingresar()">Guardar</button>
+            <button *ngIf="beditar==false" class="btn btn-primary" (click)="ingresar()">Guardar</button>
+            <button *ngIf="beditar==true" class="btn btn-primary" (click)="editar()">Editar</button>
         </div>
         <div class="col-lg-3">
             <button class="btn btn-secondary" (click)="mostrar(0)">Cancelar</button>
@@ -45,7 +46,7 @@
             <th>Nombre</th>
             <th>Email</th>
             <th>Tipo</th>
-            <th>Acciones</th>
+            <th>Accioness</th>
         </tr>
         <!-- mostrar los usuarios -->
         <tr *ngFor="let item of usuario">
@@ -53,9 +54,13 @@
            <td>{{item.email}}</td> 
            <td>{{item.tipo}}</td> 
            <td>
-                <i class="bi bi-pen-fill editar" title="editar"></i>
+                <a (click)="cargardatos(item, item.id_usuario)">
+                    <span class="bi bi-pen-fill editar" title="Editar"></span>
+                </a>
                
-                <i (click)="pregunta(item.id_usuario, item.nombre)" class="bi bi-trash3-fill eliminar" title="Eliminar"></i>
+                <a (click)="pregunta(item.id_usuario, item.nombre)">
+                    <span class="bi bi-trash3-fill eliminar" title="Eliminar" ></span>
+                </a>
            </td> 
         </tr>
     </table>
