--- a/src/app/estructura/footer/footer.component.html
+++ b/src/app/estructura/footer/footer.component.html
@@ -1,3 +1,3 @@
 <footer style="text-align: center;">
-    PROYECTO CREADO POR SANTIAGO MOTIVAR Y JOSE MANUEL TOBON.
+    PROYECTO CREADO POR SANTIAGO MOTIVAR.
 </footer>
