--- a/src/app/estructura/nav/nav.component.html
+++ b/src/app/estructura/nav/nav.component.html
@@ -2,7 +2,7 @@
   <div class="position-sticky pt-3 sidebar-sticky">
     <ul class="nav flex-column">
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" [routerLink]="['/inicio']">
+        <a class="nav-link" aria-current="page" [routerLink]="['/dashboard']">
           <i class="bi bi-house-door"></i>
           <span data-feather="home" class="align-text-bottom"></span>
           Inicio
@@ -37,10 +37,10 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/administracion']">
+        <a class="nav-link" [routerLink]="['/ventas']">
           <i class="bi bi-pc-display-horizontal"></i>
           <span data-feather="layers" class="align-text-bottom"></span>
-          Administracion
+          Ventas
         </a>
       </li>
     </ul>
