--- a/src/app/modulos/dashboard/dashboard.component.html
+++ b/src/app/modulos/dashboard/dashboard.component.html
@@ -1,9 +1,129 @@
-<h1 class="h2">Inicio</h1>
+<br><h1 class="h2">INICIO</h1>
 
-<div class="p-5 mb-4 bg-body-tertiary rounded-3">
-    <div class="container-fluid py-5">
-      <h1 class="display-5 fw-bold">Plantilla proyecto</h1>
-      <p class="col-md-8 fs-4"></p>
-      <button class="btn btn-primary btn-lg" type="button">Loading...</button>
+ 
+<div class="page-content"> 
+  <section class="row">
+      <div class="col-12 col-lg-12">
+          <div class="row">
+              <div class="col-6 col-lg-2 col-md-6">
+                  <div class="card">
+                      <div class="card-body px-4 py-4-5">
+                          <a class="row" [routerLink]="['/usuario']">
+                              <div class="col-md-4 col-lg-12 col-xl-12 col-xxl-5 d-flex justify-content-start ">
+                                  <div class="stats-icon purple mb-2">
+                                    <i class="bi bi-person-badge-fill"></i>
+                                  </div>
+                              </div>
+                              <div class="col-md-8 col-lg-12 col-xl-12 col-xxl-7">
+                                  <h6 class="text-muted font-semibold">Usuarios</h6>
+                                  <h6 class="font-extrabold mb-0">3</h6>
+                              </div>
+                            </a> 
+                      </div>
+                  </div>
+              </div>
+              <div class="col-6 col-lg-2 col-md-6">
+                  <div class="card"> 
+                      <div class="card-body px-4 py-4-5">
+                          <a class="row" [routerLink]="['/reparaciones']">
+                              <div class="col-md-4 col-lg-12 col-xl-12 col-xxl-5 d-flex justify-content-start ">
+                                  <div class="stats-icon blue mb-2">
+                                    <i class="bi bi-wrench-adjustable"></i>
+                                  </div>
+                              </div>
+                              <div class="col-md-8 col-lg-12 col-xl-12 col-xxl-7">
+                                  <h6 class="text-muted font-semibold">Reparaciones</h6>
+                                  <h6 class="font-extrabold mb-0">2</h6>
+                              </div>
+                            </a>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-6 col-lg-2 col-md-6">
+                  <div class="card">
+                      <div class="card-body px-4 py-4-5">
+                          <a class="row" [routerLink]="['/inventario']">
+                              <div class="col-md-4 col-lg-12 col-xl-12 col-xxl-5 d-flex justify-content-start ">
+                                  <div class="stats-icon green mb-2">
+                                    <i class="bi bi-box-seam-fill"></i>
+                                  </div>
+                              </div>
+                              <div class="col-md-8 col-lg-12 col-xl-12 col-xxl-7">
+                                  <h6 class="text-muted font-semibold">Inventario</h6>
+                                  <h6 class="font-extrabold mb-0">6</h6>
+                              </div>
+                            </a>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-6 col-lg-2 col-md-6">
+                  <div class="card">
+                      <div class="card-body px-4 py-4-5">
+                          <a class="row" [routerLink]="['/clientes']">
+                              <div class="col-md-4 col-lg-12 col-xl-12 col-xxl-5 d-flex justify-content-start ">
+                                  <div class="stats-icon red mb-2">
+                                    <i class="bi bi-person-raised-hand"></i>
+                                  </div>
+                              </div>
+                              <div class="col-md-8 col-lg-12 col-xl-12 col-xxl-7">
+                                  <h6 class="text-muted font-semibold">Clientes</h6>
+                                  <h6 class="font-extrabold mb-0">3</h6>
+                              </div>
+                            </a>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-6 col-lg-2 col-md-6">
+                <div class="card">
+                    <div class="card-body px-4 py-4-5">
+                        <a class="row" [routerLink]="['/ventas']">
+                            <div class="col-md-4 col-lg-12 col-xl-12 col-xxl-5 d-flex justify-content-start ">
+                                <div class="stats-icon red mb-2">
+                                    <i class="bi bi-cash"></i>
+                                </div>
+                            </div>
+                            <div class="col-md-8 col-lg-12 col-xl-12 col-xxl-7">
+                                <h6 class="text-muted font-semibold">Ventas</h6>
+                                <h6 class="font-extrabold mb-0">2</h6>
+                            </div>
+                          </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+<h1></h1>
+<h1></h1>
+<h1></h1>
+  <div class="roww">
+    <div class="col-md-5">
+      <div class=" p-5 text-bg-dark rounded-3">
+        <h2>Redes sociales</h2>
+        <p>
+          <i class="bi bi-instagram"> Instagram</i>
+        </p>
+        <p>
+          <i class="bi bi-whatsapp"> WhatsApp</i>
+        </p>
+        <p>
+          <i class="bi bi-facebook"> Facebook</i>
+        </p>
+        <p>
+          <i class="bi bi-twitter-x"> Twitter</i>
+        </p>
+        <button class="btn btn-outline-light" type="button">Conoce mas...</button>
+      </div>
+    </div>
+    <div class="col-md-5">
+      <div class="h-100 p-5 bg-light border rounded-3">
+        <h2>Informacion</h2>
+        <p>1. Direccion</p>
+        <p>2. Email</p>
+        <p>3. Experiencia</p>
+        <p>4. Procedimientos</p>
+        <button class="btn btn-outline-secondary" type="button">Ver mas...</button>
+      </div>
     </div>
   </div>
