--- a/src/app/estructura/header/header.component.html
+++ b/src/app/estructura/header/header.component.html
@@ -1,20 +1,14 @@
 <header class="navbar navbar-dark sticky-top flex-md-nowrap p-0 shadow">
   <a [routerLink]="['/dashboard']">
     <img src="../../../assets/img/logo1.png" alt="logo">
+    <a class="h" [routerLink]="['/dashboard']">Taller Mecanico</a>
   </a>
-  <br><br><br><br><a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6" [routerLink]="['/dashboard']">Taller Mecanico</a>
-  
-  <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <!--<input class="form-control form-control-dark w-100 rounded-0 border-0" type="text" placeholder="Search" aria-label="Search"> -->
   <div class="navbar-nav">
     <div class="nav-item text-nowrap">
       <a class="nav-link px-3" (click)="cerrar()" style="cursor: pointer;">Cerrar sesion</a>
     </div>
   </div>
-
-  
 </header>
-
-  
