--- a/src/app/modulos/dashboard/dashboard.component.html
+++ b/src/app/modulos/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<br><h1 class="h2">INICIO</h1>
+<br><h1>INICIO</h1>
 
  
 <div class="page-content"> 
@@ -18,9 +18,9 @@
                                   <h6 class="text-muted font-semibold">Usuarios</h6>
                                   <h6 class="font-extrabold mb-0">3</h6>
                               </div>
-                            </a> 
+                            </a>
                       </div>
-                  </div>
+                  </div><br>
               </div>
               <div class="col-6 col-lg-2 col-md-6">
                   <div class="card"> 
@@ -54,7 +54,7 @@
                               </div>
                             </a>
                       </div>
-                  </div>
+                  </div><br>
               </div>
               <div class="col-6 col-lg-2 col-md-6">
                   <div class="card">
